<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

  <TextView
      android:id="@+id/attachmentsLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/squash_it_attachments"
      android:textAppearance="?attr/textAppearanceSubtitle2"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <CheckBox
      android:id="@+id/screenshotCheckBox"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:checked="true"
      android:text="@string/squash_it_screenshot"
      app:layout_constraintEnd_toStartOf="@+id/logsCheckBox"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/attachmentsLabel" />

  <CheckBox
      android:id="@+id/logsCheckBox"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:checked="true"
      android:text="@string/squash_it_logs"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/screenshotCheckBox"
      app:layout_constraintTop_toTopOf="@+id/screenshotCheckBox" />

  <Button
      android:id="@+id/addAttachmentButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/squash_it_attach_custom_file"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/logsCheckBox" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/additionalAttachments"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:overScrollMode="never"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/addAttachmentButton" />

</merge>
